# ergodspy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  examples.py  pyproject.toml  test_ergodspy.py  verify.py
ergodspy/: __init__.py
